--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,11 +12,13 @@ activity = "1.9.1"
 constraintlayout = "2.1.4"
 materialVersion = "1.9.0"
 recyclerview = "1.3.2"
+recyclerviewSelection = "1.1.0"
 shimmer = "0.5.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-recyclerview = { module = "androidx.recyclerview:recyclerview", version.ref = "recyclerview" }
+androidx-recyclerview-selection = { module = "androidx.recyclerview:recyclerview-selection", version.ref = "recyclerviewSelection" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
